# bismuth

./: .editorconfig  .eslintignore  .eslintrc.cjs  .gitignore  .lintstagedrc.json  .npmrc  .prettierignore  .prettierrc  .versionrc.json  ASSETS_TRACKER.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FUNCTIONAL_UI_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_STATUS.md  PHASE_1_COMPLETE.md  README.md  VERSIONING_SETUP_COMPLETE.md  bismuth.sh  commitlint.config.js  eslint.config.js  index.html  jsdoc.json  knip.config.ts  knip.json  mcp-config.json  oxlint.json  package.json  playwright.config.ts  playwright.regression.config.ts  playwright.smoke.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  stylelint.config.js  svelte.config.js  tailwind.config.js  tsconfig.json  tsconfig.node.json  typedoc.json  (+2 more)
.chunk/: config.json  (+1 more)
src-tauri/: .taurignore  Cargo.toml  clippy.toml  deny.toml  rustfmt.toml  tauri.conf.alpha.json  tauri.conf.beta.json  tauri.conf.json  tauri.conf.release.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/benches/: search_bench.rs
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  db.rs  error.rs  lib.rs  logger.rs  main.rs
src-tauri/src/app/: handlers.rs  mod.rs  state.rs
src-tauri/src/commands/: backlinks_commands.rs  canvas_commands.rs  component_commands.rs  embedding_commands.rs  git_commands.rs  graph_commands.rs  lifecycle_commands.rs  linting_commands.rs  mod.rs  plugin_commands.rs  property_commands.rs  search_commands.rs  tag_commands.rs  template_commands.rs  theme_commands.rs  vault_commands.rs  wikilink_commands.rs
src-tauri/src/commands/backup/: mod.rs
src-tauri/src/commands/canvas/: canvas.rs  component.rs  design_doc.rs  mod.rs  styles.rs  token.rs  token_validation.rs
src-tauri/src/commands/content/: layout_presets.rs  lifecycle.rs  link_embed.rs  mod.rs  periodic_notes.rs  properties.rs  publish.rs  recipe_grabber.rs  tasks.rs
src-tauri/src/commands/gym/: mod.rs  workout.rs
src-tauri/src/commands/knowledge/: backlink_indexer.rs  backlinks.rs  entity.rs  graph_layout.rs  graph_layout_tests.rs  layout_algorithms.rs  mod.rs  tag.rs  wikilink.rs
src-tauri/src/commands/llm/: changes.rs  config.rs  mod.rs
src-tauri/src/commands/music/: demucs.rs  mod.rs
src-tauri/src/commands/nas/: mod.rs  webdav.rs
src-tauri/src/commands/ocr/: import.rs  mod.rs
src-tauri/src/commands/rss/: feeds.rs  mod.rs
src-tauri/src/commands/spreadsheet/: files.rs  mod.rs
src-tauri/src/commands/study/: mod.rs
src-tauri/src/commands/system/: keychain.rs  mod.rs  themes.rs  updates.rs
src-tauri/src/commands/vault_commands/: changelog.rs  export.rs  mod.rs  navigator.rs  notes.rs  operations.rs
src-tauri/src/commands/versioning/: mod.rs  version.rs
src-tauri/src/config/: constants.rs  mod.rs  settings.rs  settings_defaults.rs  vault_dirs.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/domains/: canvas.rs  content.rs  knowledge.rs  mod.rs  search.rs  system.rs  vault.rs
src-tauri/src/hubs/core/: backup_service.rs  commands.rs  embedding_service.rs  git_service.rs  mod.rs  publish_service.rs  service.rs  stats_service.rs  types.rs  vault_service.rs  version_service.rs
src-tauri/src/infrastructure/: api_server.rs  deep_link.rs  error.rs  events.rs  mcp_server.rs  mod.rs  state.rs
src-tauri/src/infrastructure/mcp_server/: canvas_advanced_ops.rs  canvas_assets_ops.rs  canvas_code_connect_ops.rs  canvas_render_ops.rs  canvas_structure_ops.rs  protocol.rs  tool_catalog.rs
src-tauri/src/models/: canvas.rs  link.rs  mod.rs  note.rs  vault.rs
src-tauri/src/models/canvas/: document.rs  elements.rs  mod.rs  portable.rs
src-tauri/src/platform/: menu.rs  tray.rs
src-tauri/src/services/: canvas_service.rs  concept_service.rs  embedding_service.rs  entity_service.rs  frontmatter_service.rs  index_service.rs  lifecycle_service.rs  mod.rs  plugin_service.rs  search_server.rs  theme_service.rs  vault_service.rs  watcher_service.rs  wikilink_service.rs
src-tauri/src/services/backup_service/: archiver.rs  config.rs  mod.rs
src-tauri/src/services/canvas_service/: canvas_crud.rs  canvas_file.rs  canvas_persistence.rs  component_file.rs  mod.rs  note_linking.rs  templates.rs
src-tauri/src/services/changelog_service/: mod.rs
src-tauri/src/services/embedding_service/: embedding_pipeline.rs  indexing.rs  mod.rs  note_linker.rs  search.rs  similarity.rs
src-tauri/src/services/frontmatter/: lifecycle.rs  migration.rs  mod.rs
src-tauri/src/utils/: fs_helpers.rs  markdown.rs  mod.rs  path.rs
src-tauri/tests/: component_commands.rs  portability_contract.rs
(+2869 files in other folders)
