[package]
name = "bismuth"
version = "0.4.0"
description = "A local-first PKM editor with Johnny.Decimal, Zettelkasten, and intelligent knowledge management"
authors = ["Yeabsira Moges <yeabsiraretta@proton.me>"]
license = "MIT"
repository = "https://github.com/yeabsiraretta/bismuth"
edition = "2021"

[lib]
name = "bismuth"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
# tauri-plugin-keychain = "2"  # Deferred: crate not yet stable for Tauri v2; keychain uses OS stubs. See specs/037-settings-overhaul T048.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.0"
git2 = "0.18"
tokio = { version = "1.0", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1.10"
lopdf = "0.32"
thiserror = "1.0"
ureq = "2.12"
quick-xml = { version = "0.39", features = ["serialize"] }
percent-encoding = "2.3"
gray_matter = "0.2"
pulldown-cmark = "0.9"
handlebars = "6"
tantivy = "0.22"
sha2 = "0.10"
dirs = "5.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"
uuid = { version = "1.23.1", features = ["v4"] }
url = "2.5"
byteorder = "1.5"
zip = { version = "8.6", features = ["deflate"] }
glob-match = "0.2"

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "search_bench"
harness = false

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
